--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/university
+url=jdbc:postgresql://localhost:5432/school
 dbuser=postgres
 dbpassword=1234
