--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/school
 spring.datasource.username=postgres
 spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.platform=postgres
+spring.datasource.schema=schema.sql
+spring.datasource.initialize=true
+spring.datasource.continue-on-error=true
 
-spring.flyway.baseline-on-migrate=true
+spring.datasource.initialization-mode=always
+spring.batch.initialize-schema=always
 
