--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,10 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-jpa</artifactId>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
