--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/school
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.platform=postgres
-spring.datasource.schema=schema.sql
 spring.datasource.initialize=true
 spring.datasource.continue-on-error=true
 
-spring.datasource.initialization-mode=always
-spring.batch.initialize-schema=always
-
+spring.jpa.hibernate.ddl-auto=update
